--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,11 +19,11 @@
 
         <fragment
             android:id="@+id/newsFragment"
-            android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:defaultNavHost="true"
-            app:navGraph="@navigation/news_host" />
+            app:navGraph="@navigation/news_host"
+            android:name="androidx.navigation.fragment.NavHostFragment"/>
 
     </FrameLayout>
 
